| Bug #12258 | mysql_client_test failure on FC4 | ||
|---|---|---|---|
| Submitted: | 29 Jul 2005 3:03 | Modified: | 31 Oct 2005 11:08 |
| Reporter: | Paul Dlug | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | 5.0.10 | OS: | Linux (Linux) |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[31 Jul 2005 19:00]
Jorge del Conde
Thanks for your bug report. I was able to reproduce this in FC4
[2 Aug 2005 18:22]
Paul Dlug
I got this to build under CentOS 4.1 with the following modification: Change line 27 of mysql-test/t/rpl_rotate_logs.test from: --error 1105,1105,29 to: --error 1201,1201,29 Obviously this might not be the "real" fix, I don't know enough about the error codes to know if this is a real bug or a bug in the test logic.
[7 Sep 2005 6:44]
Lenz Grimmer
I currently don't have a FC4 system for testing available, so it's tricky to reproduce this here. I will try to get access to one. As a workaround, you can force the test suite to pass by changing the calls to "make test" in the RPM spec file to "make test-force || true". This will make RPM continue creating the RPMs, even if there are failing tests. Could you also reproduce this with 5.0.12?
[7 Sep 2005 17:58]
Lenz Grimmer
Got the same error when testing 5.0.10 - now testing if it stil occurs with 5.0.12...
[8 Sep 2005 2:53]
Paul Dlug
I am able to successfully compile 5.0.12 on FC4 so that completes this part, I'm attempting a build on CentOS 4.1 now to see if that is also fixed.
[8 Sep 2005 15:51]
Lenz Grimmer
Well, the RPM building passed, but I could still see the failures for mysql_client_test in the build log. In addition to that, init_connect failed with an error, too - I will report that one separately.
[8 Sep 2005 16:35]
Lenz Grimmer
Of course I can not reproduce the failure when using a debug binary... Sigh.
[8 Sep 2005 20:23]
Lenz Grimmer
Reported the init_connect test failure as BUG#13068 now.
[23 Sep 2005 5:53]
Victor Pyankov
Same test error under Solaris for 5.0.14 mysql-5.0.14-rc-nightly-20050917 isainfo -vk 64-bit sparcv9 kernel modules CC=gcc CFLAGS="-O3 -fno-omit-frame-pointer -mcpu=v8 -Wa,-xarch=v8plusa" CXX=gcc CXXFLAGS="-O3 -fno-omit-frame-pointer -felide-constructors -fno-exceptions -fno-rtti -mcpu=v8 -Wa,-xarch=v8plusa" \ ./configure --prefix=/usr/local/mysql --localstatedir=/usr/local/mysql/data --libexecdir=/usr/local/mysql/bin \ --enable-thread-safe-client --enable-local-infile --enable-assembler --with-named-z-libs=no --with-named-curses-libs=-lcurses \ --disable-shared --with-low-memory --without-embedded-server --with-archive-storage-engine --with-innodb make ... cd mysql-test ./mysql-test-run --force ... rpl_rotate_logs [ fail ] Errors are (from /dbdev/tmp/mysql-5.0.14-rc-nightly-20050917/mysql-test/var/log/mysqltest-time) : mysqltest: At line 28: query 'start slave' failed with wrong errno 1201 instead of 1105... (the last lines may be the most important ones) Ending Tests ... Failed 1/331 tests, 99.69% were successful. The log files in /dbdev/tmp/mysql-5.0.14-rc-nightly-20050917/mysql-test/var/log may give you some hint of what went wrong. If you want to report this error, please read first the documentation at http://www.mysql.com/doc/en/MySQL_test_suite.html mysql-test-run in default mode: *** Failing the test(s): rpl_rotate_logs
[23 Sep 2005 6:06]
Victor Pyankov
See Sergei Golubchik explanation: http://bugs.mysql.com/bug.php?id=9763
[12 Oct 2005 19:38]
Magnus Blåudd
I will fix first part of this bug, failing mysql_client_test, see bug#12698 " Fedora Core 4: mysql_client_test [ fail ] Errors are (from /usr/src/redhat/BUILD/mysql-5.0.10-beta/mysql-test/var/log/mysqltest-time) : mysql_client_test.c:3851: check failed: 'rc == 0' /usr/src/redhat/BUILD/mysql-5.0.10-beta/client/.libs/mysqltest: At line 10: command "$MYSQL_CLIENT_TEST" failed (the last lines may be the most important ones) Aborting: mysql_client_test failed in default mode. To continue, re-run with '--force'. Ending Tests Shutting-down MySQL daemon Master shutdown finished Slave shutdown finished make: *** [test] Error 1 error: Bad exit status from /var/tmp/rpm-tmp.31450 (%build) RPM build errors: Bad exit status from /var/tmp/rpm-tmp.31450 (%build) "
[13 Oct 2005 11:50]
Magnus Blåudd
Sorry, this is not a duplicate of bug#12698. Stealing this to fix the problem with mysql_client_test on FC4.
[13 Oct 2005 13:11]
Magnus Blåudd
This is the faulty output from test_fetch_str testcase of mysql_client_test. Note that the data in the table is not correct!
#####################################
9 of (1/1): test_fetch_str
#####################################
total parameters in stmt: `7` (expected: `7`)
SELECT * FROM test_bind_fetch
+------+------+------+------+------+------+------+
| c1 | c2 | c3 | c4 | c5 | c6 | c7 |
+------+------+------+------+------+------+------+
| 196864 | 196611 | 196611 | 196611 | 12 | 25 | 38 |
| 720896 | 1572864 | 2424832 | 3276800 | 4128768 | 4980736 | 5832704 |
| 655360 | 1507328 | 2359296 | 3211264 | 4063232 | 4915200 | 5767168 |
+------+------+------+------+------+------+------+
3 rows returned
tiny : 0(1)
short : 3(2)
int : 196611(4)
longlong : 196611(8)
float : 12.000000(4)
double : 25(8)
mysql_client_test.c:3571: check failed: '(int) i8_data == rc'
char : 38(2)Avbruten (SIGABRT)
[13 Oct 2005 13:12]
Magnus Blåudd
Expected output from test_fetch_str testcase in mysql_client_test
#####################################
1 of (1/1): test_fetch_str
#####################################
total parameters in stmt: `7` (expected: `7`)
SELECT * FROM test_bind_fetch
+------+------+------+------+------+------+------+
| c1 | c2 | c3 | c4 | c5 | c6 | c7 |
+------+------+------+------+------+------+------+
| 12 | 25 | 38 | 51 | 64 | 77 | 90 |
| 11 | 24 | 37 | 50 | 63 | 76 | 89 |
| 10 | 23 | 36 | 49 | 62 | 75 | 88 |
+------+------+------+------+------+------+------+
3 rows returned
tiny : 12(1)
short : 25(2)
int : 38(4)
longlong : 51(8)
float : 64.000000(4)
double : 77(8)
char : 90(2)
tiny : 11(1)
short : 24(2)
int : 37(4)
longlong : 50(8)
float : 63.000000(4)
double : 76(8)
char : 89(2)
tiny : 10(1)
short : 23(2)
int : 36(4)
longlong : 49(8)
float : 62.000000(4)
double : 75(8)
char : 88(2)
[26 Oct 2005 12:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/31491

Description: I have been unable to build 5.0.10-beta from the source RPM. I tried Fedora Core 4 and CentOS 4.1 (same as RHEL 4.1), both have different error messages (listed below). I did not have this problem with 5.0.9-beta under either of these platforms with the same build procedures. Fedora Core 4: mysql_client_test [ fail ] Errors are (from /usr/src/redhat/BUILD/mysql-5.0.10-beta/mysql-test/var/log/mysqltest-time) : mysql_client_test.c:3851: check failed: 'rc == 0' /usr/src/redhat/BUILD/mysql-5.0.10-beta/client/.libs/mysqltest: At line 10: command "$MYSQL_CLIENT_TEST" failed (the last lines may be the most important ones) Aborting: mysql_client_test failed in default mode. To continue, re-run with '--force'. Ending Tests Shutting-down MySQL daemon Master shutdown finished Slave shutdown finished make: *** [test] Error 1 error: Bad exit status from /var/tmp/rpm-tmp.31450 (%build) RPM build errors: Bad exit status from /var/tmp/rpm-tmp.31450 (%build) CentOS 4.1: rpl_rotate_logs [ fail ] Errors are (from /usr/src/redhat/BUILD/mysql-5.0.10-beta/mysql-test/var/log/mysqltest-time) : /usr/src/redhat/BUILD/mysql-5.0.10-beta/client/.libs/mysqltest: At line 28: query 'start slave' failed with wrong errno 1201 instead of 1105. .. /usr/src/redhat/BUILD/mysql-5.0.10-beta/client/.libs/mysqltest: At line 156: Result length mismatch (the last lines may be the most important ones) Below are the diffs between actual and expected results: ------------------------------------------------------- *** r/rpl_rotate_logs.result 2005-07-22 22:50:46.000000000 +0300 --- r/rpl_rotate_logs.reject 2005-07-29 06:01:01.696031285 +0300 *************** *** 1,7 **** drop table if exists t1, t2, t3, t4; drop table if exists t1, t2, t3, t4; start slave; ! Got one of the listed errors start slave; ERROR HY000: Could not initialize master info structure; more error messages can be found in the MySQL error log change master to master_host='127.0.0.1',master_port=MASTER_PORT, master_user='root'; --- 1,7 ---- drop table if exists t1, t2, t3, t4; drop table if exists t1, t2, t3, t4; start slave; ! ERROR HY000: Could not initialize master info structure; more error messages can be found in the MySQL error log start slave; ERROR HY000: Could not initialize master info structure; more error messages can be found in the MySQL error log change master to master_host='127.0.0.1',master_port=MASTER_PORT, master_user='root'; ------------------------------------------------------- Please follow the instructions outlined at http://www.mysql.com/doc/en/Reporting_mysqltest_bugs.html to find the reason to this problem and how to report this. Aborting: rpl_rotate_logs failed in default mode. To continue, re-run with '--force'. Ending Tests Shutting-down MySQL daemon Master shutdown finished Slave shutdown finished How to repeat: Install the source RPM under Fedora Core 4 or CentOS 4.1 then do the standard "rpmbuild -ba /usr/src/redhat/SPEC/mysql-5.0.10-beta.spec"