Bug #12258 mysql_client_test failure on FC4  - Fix for gcc 4.0.1, use cast packet arg local variable